--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
+  "name": "kkphim-player",
+  "version": "1.0.0",
+  "private": true,
   "dependencies": {
     "axios": "^1.13.5",
     "hls.js": "^1.6.15",
-    "react-router-dom": "^7.13.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.13.0",
+    "react-scripts": "5.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
 }
