--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^7.3.7",
     "axios": "^1.13.5",
     "hls.js": "^1.6.15",
+    "hammerjs": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.13.0",
