--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
+    "@use-gesture/react": "^10.3.1",
     "axios": "^1.13.5",
-    "hls.js": "^1.6.15",
+    "framer-motion": "^12.34.3",
     "hammerjs": "^2.0.8",
+    "hls.js": "^1.6.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.13.0",
     "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.31.0",
     "swiper": "^12.1.0"
